--- a/AppNotifyTest/AppNotifyTest.csproj
+++ b/AppNotifyTest/AppNotifyTest.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
   </ItemGroup>
 
